--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,8 @@
 [package]
-name = "balance"
+name = "leptos-tutorial"
 version = "0.1.0"
-authors = ["Oscar Saharoy <oscar.saharoy@lowcarboncontracts.uk>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-
-dioxus = { version = "0.5", features = ["web", "router"] }
-
-# Debug
-dioxus-logger = "0.5.1"
+console_error_panic_hook = "0.1.7"
+leptos = { version = "0.7.0", features = ["csr"] }
