--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-console_error_panic_hook = "0.1.7"
+#console_error_panic_hook = "0.1.7"
 csv = "1.3.1"
-leptos = { version = "0.7.0", features = ["csr"] }
-reqwasm = "0.5.0"
-serde = { version = "1.0", features = ["derive"] }
+#leptos = { version = "0.7.0", features = ["csr"] }
+#reqwasm = "0.5.0"
 
 [[bin]]
 name = "csvtest"
