--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-console_error_panic_hook = "0.1.7"
+#console_error_panic_hook = "0.1.7"
 csv = "1.3.1"
-leptos = { version = "0.7.0", features = ["csr"] }
-reqwasm = "0.5.0"
+#leptos = { version = "0.7.0", features = ["csr"] }
+#reqwasm = "0.5.0"
 #gloo-timers = { version = "0.3", features = ["futures"] }
 
 
-#[[bin]]
-#name = "csvtest"
-#path = "src/csvtest.rs"
+[[bin]]
+name = "csv_parse"
+path = "src/csv_parse.rs"
