--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 #console_error_panic_hook = "0.1.7"
 csv = "1.3.1"
+itertools = "0.13.0"
 #leptos = { version = "0.7.0", features = ["csr"] }
 #reqwasm = "0.5.0"
 #gloo-timers = { version = "0.3", features = ["futures"] }
