--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ itertools = "0.13.0"
 leptos = { version = "0.7.0", features = ["csr"] }
 reqwasm = "0.5.0"
 gloo-timers = { version = "0.3", features = ["futures"] }
+leptos-use = "0.14.0"
 
 [[bin]]
 name = "main"
