trunk build action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,8 @@ jobs:
               uses: actions/checkout@v4
             - name: trunk-action
               uses: jetli/trunk-action@v0.5.0
-            - name: test trunk
+            - name: trunk build
               run: rustup target add wasm32-unknown-unknown && trunk build
-            - name: List files in the repository
-              run: mkdir dist && echo "<p> test </p>" > dist/index.html
             - name: Upload static files as artifact
               id: deployment
               uses: actions/upload-pages-artifact@v3
