--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
             - name: trunk-action
               uses: jetli/trunk-action@v0.5.0
             - name: trunk build
-              run: rustup target add wasm32-unknown-unknown && trunk build
+              run: rustup target add wasm32-unknown-unknown && trunk build --public-url=https://oscarsaharoy.github.io/balance/
             - name: Upload static files as artifact
               id: deployment
               uses: actions/upload-pages-artifact@v3
