--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ leptos = { version = "0.7.0", features = ["csr"] }
 reqwasm = "0.5.0"
 gloo-timers = { version = "0.3", features = ["futures"] }
 leptos-use = "0.14.0"
+fuzzy-matcher = "*"
 
 [[bin]]
 name = "main"
